# password_manager_crypto

./: .gitignore  INFORME_TECNICO.md  README.md  bandit-report.txt  crypto_engine.py  main.py  pyproject.toml  requirements.txt  test.s
app/: crypto_engine.py  main.py  style.py  style_v2.py
backend/: API_USAGE.md  database.py  main.py  password_api.py
frontend/: crypto_engine.py  main.py  ui.py
